<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="parenthesisLeft">(</string>
    <string name="parenthesisRight">)</string>
    <string name="clear">C/CE</string>
    <string name="plusMinus">+/-</string>
    <string name="allClear">AC</string>
    <string name="result">=</string>
    <string name="dot">.</string>
    <string name="backspace">erase</string>
    <string name="adv">adv</string>
    <string name="simpleCalc">Simple Calc</string>
    <string name="advCalc">Advanced Calc</string>
    <string name="author">About</string>
    <string name="exit">Exit</string>
    <string name="simp">simp</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="powerOfTwo">^2</string>
    <string name="power">^</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="percent">%</string>
    <string name="squareRoot">√</string>
    <string name="back">back</string>

</resources>